--- a/src/main/resources/templates/demo/demoCreateComplete.html
+++ b/src/main/resources/templates/demo/demoCreateComplete.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>デモ作成完了 - Demo Wave</title>
   <meta name="description" content="Demo Waveでデモ作成が完了しました">
-  <link rel="icon" href="/demo_wave/images/demowave_icon.png" type="image/png">
+  <link rel="icon" href="/images/demowave_icon.png" type="image/png">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 
@@ -452,7 +452,7 @@
       </div>
 
       <div class="flex flex-col sm:flex-row gap-4 justify-center">
-        <a href="/demo_wave/" class="btn-primary w-full sm:w-auto">
+        <a href="/" class="btn-primary w-full sm:w-auto">
           <i class="fas fa-home"></i>
           <span>トップページへ</span>
         </a>
@@ -469,7 +469,7 @@
   // Share functionality
   function shareDemo() {
     const title = /*[[${demoForm.title}]]*/ 'デモ活動';
-    const url = window.location.origin + '/demo_wave/';
+    const url = window.location.origin + '/';
 
     if (navigator.share) {
       navigator.share({
