サインアップ画面でスクロールを可能にする

--- a/src/main/resources/templates/user/signup.html
+++ b/src/main/resources/templates/user/signup.html
@@ -57,7 +57,7 @@
     }
   </style>
 </head>
-<body class="min-h-screen relative overflow-hidden bg-blue-50">
+<body class="min-h-screen relative overflow-auto bg-blue-50">
 
 <!-- Background -->
 <div class="absolute inset-0 bg-blue-50"></div>
