--- a/src/main/resources/templates/user/userCreateSuccess.html
+++ b/src/main/resources/templates/user/userCreateSuccess.html
@@ -62,7 +62,7 @@
     }
   </style>
 </head>
-<body class="min-h-screen relative overflow-hidden">
+<body class="min-h-screen relative overflow-auto">
 
 <!-- Background -->
 <div class="absolute inset-0 gradient-bg"></div>
